--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,6 +2,14 @@
 
  <h1><%= @task.title %></h1>
  <p><%= @task.details %></p>
+
+<% if @task.completed %>
+this task completed
+<% else %>
+This task is not completed yet
+<% end %>
+
+
  <p>Completed: <%= @task.completed %></p>
 
-<%= link_to 'Back to list', '/tasks' %>
+<%= link_to 'Back to list', tasks_path %>
