--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,8 +1,8 @@
-<%= form_for @task do |f| %>
-  <%= f.label :title, "Enter a task title" %>
-  <%= f.text_field :title %>
-  <%= f.label :details, "Enter task details" %>
-  <%= f.text_field :details %>
-  <%= f.check_box :completed, :as => :boolean, input_html: {checked: false} %>
-  <%= f.submit %>
+<h1>Edit task</h1>
+
+<%= render 'form', task: @task %>
+
+<hr>
+<%= link_to tasks_path do %>
+  <i class="fa fa-history"></i> Back to list
 <% end %>
